--- a/src/app/ui/blog/post-card.module.scss
+++ b/src/app/ui/blog/post-card.module.scss
@@ -4,13 +4,14 @@
   gap: var(--space-2);
   padding: var(--space-6);
   text-decoration: none;
-  background-image: var(--rainbow-gradient);
-  background-repeat: no-repeat;
-  background-position: bottom;
+  // background-image: var(--rainbow-gradient);
+  // background-repeat: no-repeat;
+  // background-position: bottom;
+  // background-size: 100% 6px;
   background-color: var(--surface-2);
-  background-size: 100% 6px;
   border: 1px solid var(--border-1);
-  border-radius: var(--radius-2);
+  border-bottom: 6px solid var(--color-accent-300);
+  border-radius: var(--radius-2) var(--radius-2) 0 0;
   transition: background-color color 0.3s ease-in-out;
 
   @media screen and (min-width: 760px) {
